# ffms2

./: README.md  configure.ac  meson.build  meson.options  pyproject.toml
.github/workflows/: build_wheel.yml  ci-meson.yml  ci-on-release.yml  ci.yml
doc/: ffms2-api.md  ffms2-changelog.md
include/: ffms.h
src/core/: ffms.cpp  indexing.cpp  indexing.h
test/: download_samples.py  test_wheel.py
