[project]
name = "vapoursynth-ffms2"
description = "An FFmpeg based source library and Avisynth/VapourSynth plugin for easy frame accurate access"
authors = [
    {name = "Derek Buitenhuis", email = "derek.buitenhuis@gmail.com"},
]
license = "MIT"
license-files = ["COPYING"]
readme = "README.md"
requires-python = ">=3.12"
keywords = ["source", "video", "audio"]
classifiers = [
    "Development Status :: 5 - Production/Stable",
    "Environment :: Plugins",
    "Natural Language :: English",
    "Operating System :: MacOS",
    "Operating System :: Microsoft :: Windows",
    "Operating System :: POSIX",
    "Operating System :: Unix",
    "Programming Language :: C++",
    "Topic :: Multimedia :: Sound/Audio",
    "Topic :: Multimedia :: Video",
]
dependencies = ["VapourSynth>=74"]
dynamic = ["version"]

[project.urls]
Source = "https://github.com/FFMS/ffms2/"
Tracker = "https://github.com/FFMS/ffms2/issues/"

[build-system]
requires = ["meson-python"]
build-backend = "mesonpy"

[tool.meson-python.args]
setup = ["-Dpython_plugin=enabled"]
